deploy_out/k8s/40-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llmserve-default
  namespace: llmserve
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: llmserve
  policyTypes: ["Ingress","Egress"]
  ingress:
    - {}
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
